Added login, registration features, 404 page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>JobVerse</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="font-montserrat text-customBlack bg-white dark:text-white dark:bg-customBlack"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
